Archive2/6a/c0d2a74f8dc60e/output
main.cpp:21:32: error: invalid explicit specialization before '>' token
 template <typename T> template<>
                                ^
main.cpp:21:32: error: enclosing class templates are not explicitly specialized
